feat: support multi-select business scenario filters
